   binaries for Windows, I consider this issue closed. Anyway, this is outside
   of Scipad
 * Fixed the resizing issue in the watch window using information provided in
   Tk bug 1217762 (the "Close" button could still be clipped after Tk patch
   1124198)
 * version --> 5.7

Francois VOGEL, 15/06/05
 * Most of the subwindows (Find/Replace, Debugger windows, tk_dialog, Goto
   line, Print Setup, tk_messageBox) inherit the current font on Linux.
   This is not possible on Windows because the dialogs used by Tk on Windows
   are mative ones. Still to be implemented: file choosers (open/save as)
   and color picker, i.e. tk_getOpenFile, tk_getSaveFile and tk_chooseColor
 * Bug fix: Replace all by an empty string did pop a tcl error
 * Proc whichfun swallows nested function definitions with continued lines.
   This is important for the debugger, that relies on the correct output of
   whichfun to display the active breakpoint for instance
 * Bugzilla url updated
 * version --> 5.8

Francois VOGEL, 16/06/05
 * Nasty bug fixed: With many opened buffers, saving one of them from the
   middle of the windows menu list caused loosing consistency between the
   tick/entry in the windows menu and the buffer actually displayed
 * $dialogFont instead of $textFont in the Linux message boxes
 * file choosers (open/save as) and color picker also use $dialogFont
 * version --> 5.9

Francois VOGEL, 20/06/05
 * $listoftextarea fixed - Maintaining order of its elements is required
 * Bug fixed: Opening two files with the same name did not tag one of them
   as unmodified
 * version --> 5.10

ES, 28/6/05
 * locale can be changed on the fly via the Options/Locale menu.
 * $lang added to $listofpref, the locale is an option remebered across 
   sessions
 * [commented out] menu entries for opening BUGS, CHANGELOG, 
   AddingTranslations.txt, msg_files/*.msg added as placeholders in the help
   menu
 * version --> 5.11