@@ -1209,4 +1209,6 @@ ES, 28/6/05
  * [commented out] menu entries for opening BUGS, CHANGELOG, 
    AddingTranslations.txt, msg_files/*.msg added as placeholders in the help
    menu
+ * textarea.tcl/setfontscipad: the menu tree is automatically traversed
+   when changing font
  * version --> 5.11
